<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.ryan_glgr.hansel_grapher</groupId>
    <artifactId>Hansel-Grapher</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>io.github.ryan_glgr.hansel_grapher.Main</main.class>

        <!-- IntelliJ build version used for the ant tasks / runtime -->
        <intellij.version>232.8660.185</intellij.version>

        <flatlaf.version>3.6.2</flatlaf.version> <!-- or latest version -->
    </properties>

    <!-- JetBrains repositories (where IntelliJ modules are published) -->
    <repositories>
        <repository>
            <id>jetbrains.releases</id>
            <name>JetBrains Releases</name>
            <url>https://www.jetbrains.com/intellij-repository/releases</url>
        </repository>
        <repository>
            <id>intellij-deps</id>
            <name>IntelliJ Dependencies</name>
            <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- XChart -->
        <dependency>
            <groupId>org.knowm.xchart</groupId>
            <artifactId>xchart</artifactId>
            <version>3.8.8</version>
        </dependency>

        <!-- VectorGraphics2D (vector export backend used by XChart) -->
        <dependency>
            <groupId>de.erichseifert.vectorgraphics2d</groupId>
            <artifactId>VectorGraphics2D</artifactId>
            <version>0.13</version>
        </dependency>

        <!-- IntelliJ runtime for forms (to be bundled / used at runtime if needed) -->
        <dependency>
            <groupId>com.jetbrains.intellij.java</groupId>
            <artifactId>java-gui-forms-rt</artifactId>
            <version>${intellij.version}</version>
        </dependency>

        <!-- IntelliJ ant tasks that include Javac2 form compilation -->
        <dependency>
            <groupId>com.jetbrains.intellij.java</groupId>
            <artifactId>java-compiler-ant-tasks</artifactId>
            <version>${intellij.version}</version>
        </dependency>

        <!-- flatlaf for not ridiculous looking GUI -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlaf.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.blackears</groupId>
            <artifactId>svg-salamander</artifactId>
            <version>1.1.5.3</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Run the IntelliJ Ant Javac2 task during the compile phase -->
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>compile-ij-forms</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <!-- src path -->
                                <path id="j2sp">
                                    <pathelement location="${project.basedir}/src/main/java"/>
                                </path>

                                <!-- define the Ant task (class is provided by java-compiler-ant-tasks dependency) -->
                                <taskdef name="javac2"
                                         classname="com.intellij.ant.Javac2"
                                         classpathref="maven.runtime.classpath"/>
                                <!-- run the Ant task: it will compile .form files into classes/resources -->
                                <javac2 destdir="${project.basedir}/target/classes">
                                    <src refid="j2sp"/>
                                </javac2>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Shade + manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- exec plugin for running -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
